// SPDX-License-Identifier: Apache-2.0
//
// Copyright 2023-2024 The Enola <https://enola.dev> Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package dev.enola.thing.test;

import "google/protobuf/any.proto";
import "google/protobuf/descriptor.proto";
import "google/protobuf/timestamp.proto";

option java_string_check_utf8 = true;
option java_package = "dev.enola.core.test";
option java_multiple_files = true;
option go_package = "dev/enola/core/test";

message TestSimple {
  string text = 1;
  uint32 number = 2;
  google.protobuf.Timestamp ts = 3;
}

message TestRepeated {
  repeated string lines = 1;
}

message TestComplex {
  TestSimple simple = 1;
  repeated TestSimple simples = 2;
}
